[package]
name = "hubert"
version = "0.4.0"
edition = "2024"
description = "Secure distributed substrate for multiparty transactions using write-once key-value storage with ARID-based addressing"
authors = ["Blockchain Commons"]
repository = "https://github.com/BlockchainCommons/hubert-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
documentation = "https://docs.rs/hubert"
keywords = ["distributed", "coordination", "FROST", "ARID", "DHT"] # Up to five
categories = [
    "network-programming",
    "command-line-utilities",
] # https://crates.io/category_slugs

[[bin]]
name = "hubert"
path = "src/bin/hubert.rs"

[dependencies]
bc-components = "^0.29.0"
bc-crypto = "^0.13.0"
bc-envelope = { version = "^0.38.0", features = ["multithreaded"] }
bc-rand = "^0.4.2"
bc-ur = "^0.17.0"
bc-xid = "^0.17.0"
dcbor = { version = "^0.24.0", features = ["multithreaded"] }
gstp = "^0.12.0"
known-values = "^0.12.0"

anyhow = "^1.0.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
chacha20 = "0.9.1"
clap = { version = "^4.4.3", features = ["derive", "unstable-styles"] }
futures-util = "0.3"
hex = "0.4"
ipfs-api-backend-hyper = "0.6.0"
ipfs-api-prelude = "0.6.0"
mainline = "6"
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlite = "0.37.0"
thiserror = "2"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

[dev-dependencies]
assert_cmd = "2"
chrono = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
